# rust-raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  settings.yaml
.github/workflows/: test.yml
scene/: test-01.yaml
scene/buddha/: render_settings.yaml  scene.yaml
scene/cornell/: cornell.blend  cornell.blend1  cornell.mtl  render_settings.yaml  scene.yaml
scene/triangle/: render_settings.yaml  scene.yaml  triangle.blend  triangle.mtl
src/: bsdf.rs  camera.rs  denoise.rs  film.rs  helpers.rs  lights.rs  main.rs  materials.rs  normal.rs  objects.rs  photon_mapper.rs  renderer.rs  sampler.rs  scene.rs  surface_interaction.rs  textures.rs  tracer.rs
src/bsdf/: helpers.rs  lambertian.rs  microfacet_reflection.rs  mod.rs  oren_nayar.rs  specular_reflection.rs  specular_transmission.rs
src/bsdf/fresnel/: mod.rs
src/bsdf/helpers/: fresnel.rs  microfacet_distribution.rs
src/lights/: area.rs  distant.rs  infinite_area.rs  mod.rs  point.rs
src/materials/: glass.rs  matte.rs  mirror.rs  mod.rs  plastic.rs
src/objects/: cube.rs  mod.rs  plane.rs  rectangle.rs  sphere.rs  triangle.rs
src/scene/: camera.rs  lights.rs  materials.rs  mod.rs  objects.rs  scene_loader.rs
src/textures/: mip_map.rs
