[package]
name = "rust-raytracer"
version = "0.1.0"
authors = ["Marijn Hurkens <marijnhurkens@gmail.com>"]

[dependencies]
lazy_static = "1.4"
image = "0.23"
ggez = "0.7.0"
rand = "0.8.5"
nalgebra = "0.30.1"
bvh = "0.6"
tobj = "2.0"
indicatif = "0.15"
sobol = "1.0.2"
yaml-rust = "0.4"
oidn = "1.4.2"
clap = {version="3.1.5", features=["derive"]}
bitflags = "1.3.2"
num-traits = "0.2"

[patch.crates-io]
bvh = {git = "https://github.com/dbenson24/bvh", branch = "master" }

[profile.release]
#opt-level = 3
#lto = "fat"
#rustflags = "-C target-cpu=native"
debug = true

#[env]
#OIDN_DIR="~/Downloads/oidn/"
