[package]
name = "rust-raytracer"
description = "A Raytracer in Rust"
license = "MIT"
version = "0.1.0"
authors = ["Marijn Hurkens <marijnhurkens@gmail.com>"]
edition = "2021"
repository = "https://github.com/marijnhurkens/rust-raytracer"
keywords = ["raytracer"]
categories = ["graphics"]

[dependencies]
lazy_static = "1.4"
image = "0.25.8"
ggez = "0.9.0-rc0"
rand = "0.9.2"
nalgebra = "0.32"
bvh = "0.8"
tobj = "3.2"
indicatif = "0.17"
sobol = "1.0.2"
yaml-rust = "0.4"
oidn = "2.3.2"
clap = {version= "4.5.50", features=["derive"]}
bitflags = "1.3.2"
num-traits = "0.2"
approx = "0.5.1"

[patch.crates-io]
ggez = { git = 'https://github.com/ggez/ggez.git', branch = "devel"  }
bvh = {git = "https://github.com/dbenson24/bvh", branch = "master" }

[profile.release]
#opt-level = 2
#lto = "thin"
#rustflags = ["-C target-cpu=native"]
#debug = true

#[env]
#OIDN_DIR="~/Downloads/oidn/"
